test/spec_vectors/load64/fail/module_46.wat
(module (memory i64 0) (func $type-address-empty-in-else (i32.const 0) (i32.const 0) (if (result i32) (then (i32.const 0)) (else (i32.load))) (drop)))